--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,21 @@
+:root {
+  --freshlink: darksalmon;
+  --usedlink: gray;
+  --hoverlink: whitesmoke;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   background-color: bisque;
-  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   background-color: darkgreen;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: darksalmon;
   padding: 15px;
@@ -24,13 +32,29 @@ header nav {
   align-items: center;
 }
 
-header ul li{
+header ul li {
   display: inline-flex;
   align-items: center;
   margin-right: 10px;
-  font-style: normal;
 }
 
+header ul li a:link {
+  text-decoration: none;
+  color: var(--freshlink);
+}
+
+header ul li a:visited {
+  color: var(--usedlink);
+}
+
+header ul li a:hover {
+  text-shadow: 0 0 1px var(--hoverlink);
+}
+
+header ul li a:active {
+  text-shadow: 0 0 15px var(--hoverlink);
+}
+/* borrowed framework from first homework assignment */
 .banner {
   height: 100px;
   width: 100%;
@@ -40,14 +64,43 @@ header ul li{
   background-position: center;
 }
 
+.portrait {
+  height: 100px;
+  width: 100px;
+  background-image: url("../assets/wood-background.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  margin-top: -110px;
+  margin-left: 15px;
+}
+
+/* .banner ~ .portrait {
+  position: relative;
+  margin-left: 0px;
+  margin-top: -100px;
+} */
+
 .about-me,
 .work {
   background-color: bisque;
-  flex-direction: row;
+  display: flex;
   justify-content: center;
   align-items: center;
   margin: 10px;
-  padding 10px;
+  padding: 10px;
+}
+
+.about-me h2 {
+  min-width: 120px;
+  max-width: 120px;
+  margin-right: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+  color: aliceblue;
+  background-color: darkgreen;
 }
 
 footer {
@@ -55,9 +108,8 @@ footer {
   justify-content: center;
   align-items: center;
   background-color: darkgreen;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
-  color: darksalmon;
+  color: black;
   padding: 10px;
 }
 
@@ -66,4 +118,33 @@ footer ul li{
   justify-content: center;
   margin-right: 20px;
   font-style: normal;
+}
+
+footer ul li a:link {
+  text-decoration: none;
+  color: darksalmon;
+}
+
+footer ul li a:visited {
+  color: var(--usedlink);
+}
+
+footer ul li a:hover {
+  text-shadow: 0 0 1px var(--hoverlink);
+}
+
+footer ul li a:active {
+  text-shadow: 0 0 15px var(--hoverlink);
+}
+
+@media screen and (max-width: 768px) {
+  .about-me {
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .about-me h2 {
+    margin-bottom: 10px;
+  }
 }
