--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
   --freshlink: darksalmon;
   --usedlink: gray;
   --hoverlink: whitesmoke;
+  --navbackground: darkgreen;
 }
 
 * {
@@ -55,19 +56,20 @@ header ul li a:active {
   text-shadow: 0 0 15px var(--hoverlink);
 }
 /* borrowed framework from first homework assignment */
+/* Photo by Pawel Czerwinski on Unsplash.com */
 .banner {
   height: 100px;
   width: 100%;
   margin-bottom: 10px;
-  background-image: url("../assets/wood-background.jpg");
+  background-image: url("./water-backgorund.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center;  
 }
 
 .portrait {
   height: 100px;
   width: 100px;
-  background-image: url("../assets/wood-background.jpg");
+  background-image: url("./SchreierID.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
@@ -75,15 +77,8 @@ header ul li a:active {
   margin-left: 15px;
 }
 
-/* .banner ~ .portrait {
-  position: relative;
-  margin-left: 0px;
-  margin-top: -100px;
-} */
-
 .about-me,
 .work {
-  background-color: bisque;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,7 +95,64 @@ header ul li a:active {
   padding: 5px;
   text-align: center;
   color: aliceblue;
-  background-color: darkgreen;
+  background-color: var(--navbackground);
+}
+
+.work h2 {
+  min-width: 120px;
+  max-width: 120px;
+  margin-right: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+  color: aliceblue;
+  background-color: var(--navbackground);
+}
+
+/* This is the styling for my prominent project */
+/* Photo by Erda Estremera on Unsplash.com */
+.main-work {
+  width: 300px;
+  height: 300px; 
+  border: 1px solid black;
+  background-image: url("./water-backdrop.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-work h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: gray;
+}
+
+.main-work p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  color: white;
+  margin-top: 5px;
+}
+
+.work a:link,
+.work a:visited {
+  text-decoration: none;
+}
+
+.work a:hover {
+  opacity: 0.85;
+}
+
+.work a:active {
+  opacity: 0.95;  
 }
 
 footer {
@@ -122,7 +174,7 @@ footer ul li{
 
 footer ul li a:link {
   text-decoration: none;
-  color: darksalmon;
+  color: var(--freshlink);
 }
 
 footer ul li a:visited {
@@ -138,13 +190,50 @@ footer ul li a:active {
 }
 
 @media screen and (max-width: 768px) {
-  .about-me {
+  header h1,
+  header nav,
+  header ul li {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .about-me,
+  .work {
     display: block;
     margin-left: 10%;
     margin-right: 10%;
   }
 
-  .about-me h2 {
-    margin-bottom: 10px;
+  .work a,
+  .main-work {
+    display: flex;
+    flex: 0 0 auto;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50%;
+    margin-left: 50%;
+  }
+
+  .about-me h2, 
+  .work h2 {
+    margin-bottom: 15px;
   }
 }
+
+/* @media screen and (max-width: 992px) {
+  .about-me,
+  .work {
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .about-me h2, 
+  .work h2 {
+    margin-bottom: 10px;
+  }
+} */
+
+
+
+
